Shenandoah crash at size_given_klass in op_degenerated

XMLWordPrintable

    • gc
    • b07
    • x86_64, aarch64
    • linux

        Renaissance benchmark sometimes crashes with cmdline:

        java -Xms4g -Xmx4g -XX:+UseShenandoahGC renaissance-gpl-0.16.0.jar all -t 300 --no-forced-gc

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007fe5f24ac8f0, pid=50201, tid=50273
        #
        # JRE version: OpenJDK Runtime Environment 1.0.1153.0 (21.0.7+7) (build 21.0.7+7-LTS)
        # Java VM: OpenJDK 64-Bit Server VM 1.0.1153.0 (21.0.7+7-LTS, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x7f28f0] oopDesc::size_given_klass(Klass*)+0x0

        V [libjvm.so+0x7f28f0] oopDesc::size_given_klass(Klass*)+0x0
        V [libjvm.so+0xe6730a] ShenandoahHeuristics::choose_collection_set(ShenandoahCollectionSet*)+0xea
        V [libjvm.so+0xe378ce] ShenandoahGeneration::prepare_regions_and_collection_set(bool)+0x14e
        V [libjvm.so+0xe1b274] ShenandoahDegenGC::op_prepare_evacuation()+0x44
        V [libjvm.so+0xe1be20] ShenandoahDegenGC::op_degenerated()+0x3d0
        V [libjvm.so+0xe1c371] ShenandoahDegenGC::entry_degenerated()+0xb1
        V [libjvm.so+0xec5e52] VM_ShenandoahDegeneratedGC::doit()+0x52
        V [libjvm.so+0x1078aef] VM_Operation::evaluate()+0xff
        V [libjvm.so+0x107be82] VMThread::evaluate_operation(VM_Operation*)+0xb2
        V [libjvm.so+0x107cb7f] VMThread::inner_execute(VM_Operation*)+0x34f
        V [libjvm.so+0x107ce77] VMThread::run()+0xb7
        V [libjvm.so+0xfe8338] Thread::call_run()+0xa8
        V [libjvm.so+0xd19cba] thread_native_entry(Thread*)+0xda

              Assignee:
              William Kemper
              Reporter:
              Kerem Kat
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: