8360288: Shenandoah crash at size_given_klass in op_degenerated

Reviewed-by: phh
Backport-of: 3b44d7bfa4d78e3ec715fce1863e052852f33180